# ComfyUI-Lora-Visualizer

./: .cursorrules  .gitignore  .pylintrc  CLAUDE.md  LICENSE  PR_DESCRIPTION.md  README.md  WORK_PLAN.md  __init__.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_lora_pairing.py  test_lora_search.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT_STATUS.md  prompt-composer-node-spec.md
examples/: lora_high_low_splitter_example.py
js/: lora_visualizer.js
nodes/: __init__.py  logging_utils.py  lora_analysis.py  lora_analysis_preprocessor.py  lora_analysis_processor.py  lora_high_low_splitter_node.py  lora_metadata_utils.py  lora_prompt_composer_node.py  lora_utils.py  lora_visualizer_node.py  ollama_utils.py  prompt_composer_node.py  prompt_splitter_node.py  wan_lora_high_low_splitter.py
nodes/lora_analysis/: __init__.py  image_analyzer.py
scripts/: generate_wan_high_low_splitter_test_workflow.py  install_node_to_comfy.sh
tests/: test_lora_analysis.py  test_lora_high_low_splitter.py  test_lora_metadata_utils.py  test_lora_parsing.py  test_lora_prompt_composer.py  test_prompt_composer.py  test_prompt_splitter.py  test_wan_lora_high_low_splitter.py
tests/fixtures/: DetailAmplifier wan480p v1.0.metadata.json  Woman877.v2.metadata.json  illustriousXLv01_stabilizer_v1.198.metadata.json
