[project]
name = "comfyui-lora-visualizer"
description = "A ComfyUI custom node that parses prompt text for LoRA tags and visualizes their metadata, including trigger words, strength values, thumbnail previews, and example images."
version = "2.0.0"
requires-python = "==3.10.*"
dependencies = [ 
    "pytest>=8.4.1", 
    "black>=22.0.0", 
    "pylint>=2.12.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
]
readme = "README.md"
[[project.authors]]
name = "Oliver Switzer"
email = "oliverswitzer@gmail.com"

[project.license]
file = "LICENSE"
text = "MIT"

[project.urls]
Repository = "https://github.com/oliverswitzer/ComfyUI-Lora-Visualizer"

[tool.pdm]
distribution = false

[tool.comfy]
PublisherId = "switzerswish"
DisplayName = "LoRA Visualizer"
Icon = ""

[tool.pdm.dev-dependencies]
dev = [ "pytest>=7.0.0", "black>=22.0.0", "pylint>=2.12.0",]

[tool.pdm.scripts]
format = "black ."
format-check = "black --check --diff ."
lint = "pylint nodes/ tests/"
test = "pytest tests"

[tool.pdm.scripts.ci]
composite = [ "format-check", "test", "lint",]

[tool.setuptools.packages.find]
include = [ "nodes*",]
