[project]
name = "comfyui-lora-visualizer"
description = "A ComfyUI custom node that parses prompt text for LoRA tags and visualizes their metadata, including trigger words, strength values, thumbnail previews, and example images."
version = "2.3.0"
requires-python = ">=3.9"
dependencies = [ "sentence-transformers>=2.2.0", "scikit-learn>=1.0.0",]
readme = "README.md"
[[project.authors]]
name = "Oliver Switzer"
email = "oliverswitzer@gmail.com"

[project.license]
file = "LICENSE"
text = "MIT"

[project.urls]
Repository = "https://github.com/oliverswitzer/ComfyUI-Lora-Visualizer"

[tool.pdm]
distribution = false

[tool.comfy]
PublisherId = "switzerswish"
DisplayName = "LoRA Visualizer"
Icon = ""

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pdm.dev-dependencies]
dev = [ "pytest>=8.4.1", "ruff>=0.1.0",]

[tool.pdm.scripts]
format = "ruff format ."
format-check = "ruff format --check --diff ."
lint = "ruff check nodes/ tests/"
test = "pytest tests"

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "B", "C4", "UP",]
ignore = [ "E501",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pdm.scripts.ci]
composite = [ "format-check", "test", "lint",]

[tool.setuptools.packages.find]
include = [ "nodes*",]
